--- a/index.html
+++ b/index.html
@@ -10,10 +10,8 @@
     <div class="card">
         <div class="content">
             <h1>Add your task</h1>
-            <div>
-                <input type="text" id="input" />
-                <button id="addTodo">Add</button>
-            </div>
+            <input type="text" id="input" />
+            <button id="addTodo">Add Task</button>
             <div>
                 <ul class="animation" id="todoList"></ul>
             </div>
