--- a/index.html
+++ b/index.html
@@ -3,17 +3,35 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="index.css">
     <title>Todo App</title>
 </head>
 <body>
-    <div>
-        <input type="text" id="input" />
-        <button id="addTodo">タスクを追加</button>
-    </div>
-    <div>
-        <ul id="todoList"></ul>
+    <div class="card">
+        <div class="content">
+            <h1>Add your task</h1>
+            <input type="text" id="input" />
+            <button id="addTodo">Add Task</button>
+            <div>
+                <ul class="animation" id="todoList"></ul>
+            </div>
+        </div>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js" integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="app.js"></script>
+
+
+    <script src="./vanilla-tilt.js"></script>
+    <script type="text/javascript">
+	VanillaTilt.init(document.querySelector(".card"), {
+		max: 25,
+		speed: 400,
+        glare: true,
+        "max-glare": 1,
+	});
+	
+	//It also supports NodeList
+	VanillaTilt.init(document.querySelectorAll(".your-element"));
+</script>
 </body>
 </html>
